update bio page template to break down properly on mobile & fix alignment

--- a/styleguide/source/assets/scss/02-molecules/_header-tags.scss
+++ b/styleguide/source/assets/scss/02-molecules/_header-tags.scss
@@ -3,6 +3,8 @@
   letter-spacing: .1em;
   text-transform: uppercase;
   max-width: $l-max-content-width;
+  display: flex;
+  align-items: baseline;
 
   > span {
     white-space: nowrap;
